--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -8,8 +8,11 @@ justify-content: center;
 border-radius: 10px;
 }
 .online {
-    color: green;
-    font-size: 200px;
+    width: 20px;
+    height: 20px;
+background-color: green; 
+   /* color: green;
+    font-size: 200px; */
 }
 .offline {
     color: red;
